# multivector

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
benchmark/: README.md  audit_encoder.py  cache_embeddings.py  colbert_config.py  data.py  dense_baseline.py  diagnose.py  embeddings.py  env.py  matrix.py  provenance.py  read_reports.py  requirements.txt  run.py  significance.py  sweep.py  test_significance.py  uncompressed_oracle.py  validate_scores.py
benchmark/reports/: README.md  v0.1.0.jsonl
scripts/: version.py
src/: engine.rs  fde.rs  lib.rs  main.rs  muvera.rs  storage.rs
tests/: engine.rs
