[package]
name = "multivector"
version = "0.1.0"
default-run = "multivector"
edition = "2024"
description = "Late-interaction retrieval with fixed-dimensional candidate generation and compressed MaxSim rescoring"
license = "MIT"

[dependencies]
axum = "0.8"
blake3 = "1.8"
bytemuck = "1.24"
# Pinned so a clean checkout builds without a sibling `vectordb` directory.
vectordb = { git = "https://github.com/rosharma719/vectordb", rev = "31ecd617709387a4d7df8edd9a9a2195ad0bd11b" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
rayon = "1.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }

[dev-dependencies]
tempfile = "3"
